<resources>
    <string name="app_name">Yesaya Software</string>
    <string name="posts">Posts</string>
    <string name="podcasts">Podcasts</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="post_thumbnail">Post thumbnail</string>

    <!-- validation Errors -->
    <string name="err_name">The name field is required.</string>
    <string name="err_email">The email must be a valid email address.</string>
    <string name="err_password">The password must be at least 6 characters.</string>

    <!-- validation Errors Category-->
    <string name="err_cat_name">The name field is required.</string>
    <string name="err_cat_description">The description is required.</string>

    <string name="_5_comments">5 comments</string>
    <string name="_18">18</string>
    <string name="working_on_the_weather_app_design">Working on the Weather App Design</string>
    <string name="_11_hrs">11 hrs</string>
    <string name="yesaya_r_athuman">Yesaya R. Athuman</string>
    <string name="user_profile">User profile</string>
</resources>
